Wed May  3 23:19:32 2006  Tim Janik  <timj@gtk.org>

	* library/effects/atan-canyon.bse:
	* library/instruments/bqs-organ.bse: 
	* library/instruments/bqs-organ.bse:
	* library/instruments/bqs-syndrum.bse:
	* library/instruments/bqs-merp-pad.bse:
	* library/instruments/bqs-queek-synth.bse:
	* library/instruments/bqs-moog-saw-bass.bse:
	* library/instruments/bqs-fretless-bass.bse:
	added a link to http://beast.gtk.org/LICENSE-AS-IS to clarify
	the licensing information.

	* web/htaccess.in: redirect http://beast.gtk.org/LICENSE-AS-IS

Tue May  2 19:23:23 2006  Tim Janik  <timj@gtk.org>

	* web/news.doxi:
	* web/contact.doxi: provide bugzilla links.

	* web/htaccess.in: support /bugs redirect.

Mon Apr 24 20:49:04 2006  Tim Janik  <timj@gtk.org>

	* web/webmenu.doxi: moved news entry macros here, added anchors.

	* docs/beastdefs.doxi: removed news entry macros.

	* web/Makefile.am: fixed file paths in .md5sum files.

Mon Apr 24 20:11:45 2006  Tim Janik  <timj@gtk.org>

	* web/oldnews.doxi:
	* web/news.doxi: rotate, announce LAD conference 2006 visit.

	* web/Makefile.am (ACCOUNT): fix for timj to update the website from 
	multiple accounts.

Thu Apr 20 20:50:35 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkassortment.c: added extra guards to ensure that 
	assortment free() functions do not cause self->selected to point to 
	invalid/freed entries.

Thu Apr 20 01:23:17 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Fix printf format warnings.

Wed Apr 19 23:49:36 2006  Tim Janik  <timj@gtk.org>

	* configure.in: fixed inverted WITH_PERLRULE check.

	* beast-gtk/gxk/Makefile.am: fixed up clean rules so stamp files
	are properly deleted and dependent files are properly built.

Wed Apr 19 02:30:34 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: added specialized "distcheck" rule that disables a 
	recursive make dist. the reason for which is explained here:
	http://blogs.gnome.org/view/timj/2006/04/18/0

	* docs/beast.1.doxi: