@@ -411,36 +411,39 @@ bst_scrollgraph_probes_notify (SfiProxy     source,
   guint i;
   for (i = 0; i < pseq->n_probes && !probe; i++)
     if (pseq->probes[i]->channel_id == self->ochannel)
-      probe = pseq->probes[i];
+      {
+        BseProbe *candidate = pseq->probes[i];
+        if (candidate->probe_features->probe_fft &&
+            candidate->fft_data->n_values == self->window_size)
+          probe = candidate;
+      }
   if (probe && probe->mix_freq != self->mix_freq && probe->mix_freq > 0)
     {
       self->mix_freq = probe->mix_freq;
       bst_scrollgraph_resize_values (self, self->direction);
     }
-  if (probe && probe->probe_features->probe_fft && probe->fft_data->n_values)
+  if (probe && probe->probe_features->probe_fft && probe->fft_data->n_values == self->window_size)
     {
       gfloat *bar = BAR (self, self->n_bars - 1); /* update last bar */
       SfiFBlock *fft = probe->fft_data;
-      if (self->window_size == fft->n_values)
+      for (i = 0; i < MIN (self->n_points, FFTSZ2POINTS (fft->n_values)); i++)
         {
-          for (i = 0; i < MIN (self->n_points, FFTSZ2POINTS (fft->n_values)); i++)
-            {
-              gfloat re, im;
-              if (i == 0)
-                re = fft->values[0], im = 0;
-              else if (i == fft->n_values / 2)
-                re = fft->values[1], im = 0;
-              else
-                re = fft->values[i * 2], im = fft->values[i * 2 + 1];
-              bar[i] = sqrt (re * re + im * im); // FIXME: speed up
-            }
-          bst_scrollgraph_scroll_bars (self); /* last bar becomes bar0 */
-          if (GTK_WIDGET_DRAWABLE (self))
-            bst_scrollgraph_draw_bar (self, 0);
+          gfloat re, im;
+          if (i == 0)
+            re = fft->values[0], im = 0;
+          else if (i == fft->n_values / 2)
+            re = fft->values[1], im = 0;
+          else
+            re = fft->values[i * 2], im = fft->values[i * 2 + 1];
+          bar[i] = sqrt (re * re + im * im); // FIXME: speed up
         }
+      bst_scrollgraph_scroll_bars (self); /* last bar becomes bar0 */
+      if (GTK_WIDGET_DRAWABLE (self))
+        bst_scrollgraph_draw_bar (self, 0);
     }
   bse_probe_seq_free (pseq);
-  bse_source_queue_probe_request (self->source, self->ochannel, 0, 0, 0, self->window_size);
+  float mix_freq = bse_source_get_mix_freq (self->source);
+  bst_source_queue_probe_request (self->source, self->ochannel, BST_SOURCE_PROBE_FFT, mix_freq / self->window_size);
 }
 
 static void
@@ -491,7 +494,8 @@ bst_scrollgraph_set_source (BstScrollgraph *self,
                          "signal::probes", bst_scrollgraph_probes_notify, self,
                          "swapped-signal::io_changed", bst_scrollgraph_io_changed, self,
                          NULL);
-      bse_source_queue_probe_request (self->source, self->ochannel, 0, 0, 0, self->window_size);
+      float mix_freq = bse_source_get_mix_freq (self->source);
+      bst_source_queue_probe_request (self->source, self->ochannel, BST_SOURCE_PROBE_FFT, mix_freq / self->window_size);
       bst_scrollgraph_io_changed (self);
     }
 }
